--- a/views/content.html
+++ b/views/content.html
@@ -20,7 +20,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <div><a href="#/subcategory/4" class="homecat"><i class="fa fa-glass fa-3x"></i></a>
+                            <div><a href="#/subcategory/4" class="homecat"><img src="lib/images/home/imageedit_5_8936170417.gif" class="fa-3x"></a>
                             </div>
                             <p>Fast Food</p>
 
@@ -413,7 +413,7 @@
                             <div><a href="#/category" class="homecat"><i class="fa fa-users fa-3x"></i></a>
                             </div>
 
-                            <p>consultancy</p>
+                            <p>Consultants/Professionals</p>
 
                         </div>
 
@@ -560,7 +560,7 @@
                             <div><a href="#/category" class="homecat"><i class="fa fa-moon-o fa-3x"></i></a>
                             </div>
 
-                            <p>Night Life</p>
+                            <p>Nightlife/Events</p>
 
                         </div>
 
