--- a/views/navigation.html
+++ b/views/navigation.html
@@ -1,15 +1,15 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <p class="text-center mrt10">
-                <a href="#/home"><img src="lib/images/home/Logo.png" style="height:100px;" /></a>
-            </p>
-            <div class="mrt-80">
-						<a href="#" class="circlehover with-symbol mrd10" data-size="" data-position="top-left" data-align="right">
-							<span class="text"><i class="fa fa-phone fa-4x"></i></span>
-							<span class="symbol">9854785478</span>
+           <div class="phone" style="text-align: right;">
+						<a href="#" class="with-symbol mrd10" data-size="" data-position="top-left" data-align="right">
+							<span class="symbol"><img src="lib/images/home/Telephone-icon.png" style="width:20px;">022222 11111</span>
 						</a>
 					</div>
+            <p class="text-center mrt10">
+                <a href="#/home"><img src="lib/images/home/logo(1).png" style="height:100px;" /></a>
+            </p>
+            
         </div>
     </div>
 </div>
