--- a/views/navigation.html
+++ b/views/navigation.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-           <div class="phone" style="text-align: right;">
+           <div class="phone" style="text-align: right; margin-top:8px;">
 						<a href="#" class="with-symbol mrd10" data-size="" data-position="top-left" data-align="right">
-							<span class="symbol"><img src="lib/images/home/Telephone-icon.png" style="width:20px;">022222 11111</span>
+							<span class="symbol" style="font-size: 27px;"><img src="lib/images/home/Telephone-icon.png" style="width:30px;">022222 11111</span>
 						</a>
 					</div>
             <p class="text-center mrt10">
