--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -11,6 +11,17 @@
     position: relative;
     font-weight: 400px;
 }
+.signupmsg{
+    margin-bottom: 10px;
+    color: #333;
+    background: rgba(255, 146, 0, 0.39);
+    padding: 10px;
+    font-size: 125%;
+    font-weight: 100;
+}
+.onlycursor:hover{
+    cursor: pointer;
+}
 .cursor:hover {
     color: orange !important;
     cursor: pointer;
