--- a/views/login.html
+++ b/views/login.html
@@ -21,10 +21,13 @@
 				<div class="col-sm-4">
 					<div class="signup-form"><!--sign up form-->
 						<h2>New User Signup!</h2>
+                        <div class="signupmsg" ng-show="signupmsgg">
+                            {{signupmsg}}
+                        </div>
 						<form>
 							<input type="email" ng-model="signup.email" placeholder="Email Address"/>
 							<input type="password" ng-model="signup.password" placeholder="Password"/>
-							<button type="submit" class="btn btn-default" ng-click="signup(signup)">Signup</button>
+							<button type="submit" class="btn btn-default" ng-click="signupuser(signup)">Signup</button>
 						</form>
 					</div><!--/sign up form-->
 				</div>
