--- a/views/header.html
+++ b/views/header.html
@@ -1,11 +1,11 @@
-<header id="header"><!--header-->
+<header id="header" ng-controller="OtherCtrl"><!--header-->
 		<div class="header_top"><!--header_top-->
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6">
 						<div class="contactinfo">
 							<ul class="nav nav-pills">
-                                <li><a href="#/login"><i class="fa fa-lock"></i> Login</a></li>
+                                <li><a ng-click="loginfunction()"><i class="fa fa-lock"></i> {{loginlogout}}</a></li>
 								<li><a href="#">&nbsp;&nbsp;List Your Business</a></li>
 								<!-- <li><a href="#"><i class="fa fa-phone"></i> +2 95 01 88 821</a></li>
 								<li><a href="#"><i class="fa fa-envelope"></i> info@domain.com</a></li> -->
