--- a/views/footerbottom.html
+++ b/views/footerbottom.html
@@ -1,8 +1,8 @@
 <div class="footer-bottom">
 			<div class="container">
 				<div class="row">
-					<p class="pull-left">Copyright © 2013 AnyInformation Inc. All rights reserved.</p>
-					<p class="pull-right">Designed by <span><a target="_blank" href="http://www.wohlig.com">Wohlig Technology PVT. LTD.</a></span></p>
+					<p class="pull-left"> Copyright © 2014 ForAnyInformation Inc. All rights reserved.</p>
+					<p class="pull-right">Designed by <span><a target="_blank" href="http://www.wohlig.com">Wohlig Technologies LLP</a></span></p>
 				</div>
 			</div>
 		</div>
