--- a/views/login.html
+++ b/views/login.html
@@ -5,14 +5,14 @@
 					<div class="login-form"><!--login form-->
 						<h2>Login to your account</h2>
 						<form>
-							<input type="text" placeholder="Name" />
-							<input type="email" placeholder="Email Address" />
+							<input type="text" ng-model="login.name" placeholder="Name" />
+							<input type="email" ng-model="login.email" placeholder="Email Address" />
 							<span>
 								<input type="checkbox" class="checkbox"> 
 								Keep me signed in
 							</span>
-							<button type="submit" class="btn btn-default">Login</button>
-						</form>
+							<button class="btn btn-default" ng-click="userlogin(login)">Login</button>
+                        </form>
 					</div><!--/login form-->
 				</div>
 				<div class="col-sm-1">
@@ -27,7 +27,7 @@
 						<form>
 							<input type="email" ng-model="signup.email" placeholder="Email Address"/>
 							<input type="password" ng-model="signup.password" placeholder="Password"/>
-							<button type="submit" class="btn btn-default" ng-click="signupuser(signup)">Signup</button>
+							<button class="btn btn-default" ng-click="signupuser(signup)">Signup</button>
 						</form>
 					</div><!--/sign up form-->
 				</div>
