--- a/views/slider.html
+++ b/views/slider.html
@@ -5,12 +5,12 @@
             <form class="searchform searchformtext">
                
                <select class="city onlycursor" ng-model="form.cityy" ng-click="citychange(form.cityy)">
-                    <option class="onlycursor" style="background:#FF6A00;" ng-repeat="city in cities" value="{{city.id}}">{{city.name}} </option>
+                    <option class="onlycursor" style="background:rgba(229, 83, 94, 0.2);" ng-repeat="city in cities" value="{{city.id}}">{{city.name}} </option>
                 </select>
                 
                 <select class="city onlycursor" ng-model="form.area">
-                   <option class="onlycursor" style="background:#FF6A00;" value="">Select Area</option>
-                    <option class="onlycursor" style="background:#FF6A00;" ng-repeat="area in areas" value="{{area.id}}">{{area.name}} </option>
+                   <option class="onlycursor" style="background:rgba(229, 83, 94, 0.2);" value="">Select Area</option>
+                    <option class="onlycursor" style="background:rgba(229, 83, 94, 0.2);" ng-repeat="area in areas" value="{{area.id}}">{{area.name}} </option>
                 </select>
                
                 <!-- <span style="color:white;" id="location" class="showdiv tofirstup">Location <i class="fa fa-chevron-down"></i></span>
@@ -22,7 +22,7 @@
                     <option ng-repeat="are in area" value="{{are.name}}">{{are.name}}</option>
                 </select> -->
                 
-                <input type="text" name="abc" placeholder="Search For Anything Anywhere" ng-model="search" ng-change="searchlist(search)" style="width: 92%;" />
+                <input type="text" name="abc" placeholder="Search For Anything Anywhere" ng-model="search" ng-change="searchlist(search)" style="width: 90%;" />
                 <!-- <input type="hidden" name="searchid" ng-model="categoryid"> -->
                 {{categoryid}}
                 <button type="submit" id="sea" class="btn btn-default search"><i class="fa fa-arrow-circle-o-right" ng-click="innershearch()"></i>
@@ -38,7 +38,71 @@
 
             </div>
         </div>
+        <div class="row">
+         <!-- <div id="slider-carousel" class="carousel slide homeimageright" data-ride="carousel">
+                 <ol class="carousel-indicators">
+            <li data-target="#slider-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#slider-carousel" data-slide-to="1"></li>
+            <li data-target="#slider-carousel" data-slide-to="2"></li>
+                 </ol>
+                 
+                 <div class="carousel-inner" style="width:21%;margin-top: 2%;">
+            <div class="item active">
+                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:228px;" alt="" />
+            </div>
+             <div class="item ">
+                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:228px;" alt="" />
+            </div>
+             <div class="item ">
+                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:228px;" alt="" />
+            </div>
+            
+                 
+                 </div>
+                 
+                 <a href="#slider-carousel" class="left control-carousel hidden-xs" data-slide="prev">
+            <i class="fa fa-angle-left"></i>
+                 </a>
+                 <a href="#slider-carousel" class="right control-carousel hidden-xs" data-slide="next">
+            <i class="fa fa-angle-right"></i>
+                 </a>
+            </div>  -->
+<img src="http://localhost/anyinform/lib/images/home/shipping.jpg" class="homeimageright">
+
+<!-- <div id="slider-carousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#slider-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#slider-carousel" data-slide-to="1"></li>
+            <li data-target="#slider-carousel" data-slide-to="2"></li>
+        </ol>
+
+        <div class="carousel-inner" style="width:21%;margin-top: 2%;">
+            <div class="item active">
+                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:228px;" alt="" />
+            </div>
+             <div class="item ">
+                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:228px;" alt="" />
+            </div>
+             <div class="item ">
+                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:228px;" alt="" />
+            </div>
+            
+
+        </div>
+
+<a href="#slider-carousel" class="left control-carousel hidden-xs" data-slide="prev">
+            <i class="fa fa-angle-left"></i>
+        </a>
+        <a href="#slider-carousel" class="right control-carousel hidden-xs" data-slide="next">
+            <i class="fa fa-angle-right"></i>
+        </a>
     </div>
+ -->
+<img src="http://localhost/anyinform/lib/images/home/shipping.jpg" class="homeimageleft">
+        </div>
+    </div>
+    
+<!--
     <div id="slider-carousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#slider-carousel" data-slide-to="0" class="active"></li>
@@ -67,6 +131,7 @@
             <i class="fa fa-angle-right"></i>
         </a>
     </div>
+-->
 </section>
 <!--/slider-->
 <script>
