red color blue color

--- a/views/navigation.html
+++ b/views/navigation.html
@@ -7,7 +7,7 @@
 						</a>
 					</div>
             <p class="text-center mrt10">
-                <a href="#/home"><img src="lib/images/home/logo(1).png" style="height:100px;" /></a>
+                <a href="#/home"><img src="lib/images/home/logo2.png" style="height:100px;" /></a>
             </p>
             
         </div>
