--- a/views/content.html
+++ b/views/content.html
@@ -5,8 +5,14 @@
                 <div class="product-image-wrapper homecat">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <a href="#/subcategory/{{category.id}}" class="homecat">
+                            <a href="#/subcategory/{{category.id}}" ng-show="{{category.status==0}}" class="homecat">
                                 <div><i class="{{category.logo}}"></i>
+                                </div>
+                                <p>{{category.name}}</p>
+                            </a>
+                            <a href="#/subcategory/{{category.id}}" ng-show="{{category.status==1}}" class="homecat">
+                                <div>
+                                    <img src="http://localhost/anyinform/lib/images/home/{{category.logo}}" class="fa-3x"/>
                                 </div>
                                 <p>{{category.name}}</p>
                             </a>
@@ -15,5 +21,27 @@
                 </div>
             </div>
         </div>
+        
+<!--
+        
+        <div class="row">
+            <div class="col-sm-2">
+                <div class="product-image-wrapper homecat">
+                    <div class="single-products">
+                        <div class="productinfo text-center">
+                            <a href="#" class="homecat">
+                                <div>
+                                    <img src="http://localhost/anyinform/lib/images/" style="width:50px;"/>
+                                </div>
+                                <p>title</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+-->
+        
     </div>
 </section>
