--- a/views/innerheader.html
+++ b/views/innerheader.html
@@ -3,7 +3,7 @@
 				<div class="row">
 					<div class="col-sm-8">
 						<div class="logo pull-left">
-							<a href="#/home"><img src="lib/images/home/logo(1).png" style="height:45px;" alt="" /></a>
+							<a href="#/home"><img src="lib/images/home/logo2.png" style="height:45px;" alt="" /></a>
 						</div>
 						<div class="btn-group pull-right">
 								<form action="#" class="searchform">
@@ -15,8 +15,8 @@
 					<div class="col-sm-4">
 						<div class="shop-menu pull-right">
 							<ul class="nav navbar-nav">
-								<li><a href="#"><i class="fa fa-user"></i> {{signuppro}}</a></li>
-								<li><a ng-click="loginfunction()"><i class="fa fa-lock"></i> {{loginlogout}}</a></li>
+								<li><a class="onlycursor" ng-click="signupprofile()"><i class="fa fa-user"></i> {{signuppro}}</a></li>
+								<li><a class="onlycursor" ng-click="loginfunction()"><i class="fa fa-lock"></i> {{loginlogout}}</a></li>
 							</ul>
 						</div>
 					</div>
