--- a/views/login.html
+++ b/views/login.html
@@ -5,8 +5,9 @@
 					<div class="login-form"><!--login form-->
 						<h2>Login to your account</h2>
 						<form>
-							<input type="text" ng-model="login.name" placeholder="Name" />
+							
 							<input type="email" ng-model="login.email" placeholder="Email Address" />
+							<input type="password" ng-model="login.password" placeholder="Password"/>
 							<span>
 								<input type="checkbox" class="checkbox"> 
 								Keep me signed in
