--- a/views/slider.html
+++ b/views/slider.html
@@ -1,7 +1,82 @@
 <section id="slider">
     <!--slider-->
     <div class="container">
-        <div class="row searchslider">
+        <!-- <div class="row searchslider">
+            <form class="searchform searchformtext">
+               
+               <select class="city onlycursor" ng-model="form.cityy" ng-click="citychange(form.cityy)">
+                    <option class="onlycursor" style="background:rgba(229, 83, 94, 0.2);" ng-repeat="city in cities" value="{{city.id}}">{{city.name}} </option>
+                </select>
+                
+                <select class="city onlycursor" ng-model="form.area">
+                   <option class="onlycursor" style="background:rgba(229, 83, 94, 0.2);" value="">Select Area</option>
+                    <option class="onlycursor" style="background:rgba(229, 83, 94, 0.2);" ng-repeat="area in areas" value="{{area.id}}">{{area.name}} </option>
+                </select>
+               
+                <span style="color:white;" id="location" class="showdiv tofirstup">Location <i class="fa fa-chevron-down"></i></span>
+                <select class="btn btn-default mrt30 city hidediv" id="locationdrop" ng-model="city">
+                    <option ng-repeat="city in cities" value="{{city.name}}">{{city.name}}</option>
+                </select>
+                <span style="color:white;padding-left: 142px;" id="area" class="showdiv tofirstup">Location <i class="fa fa-chevron-down"></i></span>
+                <select class="btn btn-default mrt30 area hidediv" id="areadrop" ng-model="area">
+                    <option ng-repeat="are in area" value="{{are.name}}">{{are.name}}</option>
+                </select>
+                
+                <input type="text" name="abc" placeholder="Search For Anything Anywhere" ng-model="search" ng-change="searchlist(search)" style="width: 90%;" />
+                <input type="hidden" name="searchid" ng-model="categoryid">
+                {{categoryid}}
+                <button type="submit" id="sea" class="btn btn-default search"><i class="fa fa-arrow-circle-o-right" ng-click="innershearch()"></i>
+                </button>
+                <div id="divsearch" class="searchdrop" ng-show="searchshow">
+                    <p ng-repeat="sea in searchdrop" ng-click="totextbox(sea.name,sea.id)">{{sea.name}}</p>
+                </div>
+            </form>
+        </div> -->
+        <div class="row">
+            <div class="col-sm-12">
+
+
+            </div>
+        </div>
+        <div class="row">
+<!--<img src="http://localhost/anyinform/lib/images/home/shipping.jpg" class="homeimageright">-->
+
+
+
+
+            <div class="col-xs-3">
+
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="http://localhost/anyinform/lib/images/home/iframe4.png" width="200"/>
+                        </div>
+                        <div class="item">
+                            <img src="http://localhost/anyinform/lib/images/home/iframe4.png" width="200"/>
+                        </div>
+                        <div class="item">
+                            <img src="http://localhost/anyinform/lib/images/home/iframe4.png" width="200"/>
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    
+                </div>
+
+            </div>
+
+
+            <div class="col-xs-6">
+                
+                <div class="searchslider">
             <form class="searchform searchformtext">
                
                <select class="city onlycursor" ng-model="form.cityy" ng-click="citychange(form.cityy)">
@@ -32,106 +107,43 @@
                 </div>
             </form>
         </div>
-        <div class="row">
-            <div class="col-sm-12">
+                
+            </div>
 
 
-            </div>
-        </div>
-        <div class="row">
-         <!-- <div id="slider-carousel" class="carousel slide homeimageright" data-ride="carousel">
-                 <ol class="carousel-indicators">
-            <li data-target="#slider-carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#slider-carousel" data-slide-to="1"></li>
-            <li data-target="#slider-carousel" data-slide-to="2"></li>
-                 </ol>
-                 
-                 <div class="carousel-inner" style="width:21%;margin-top: 2%;">
-            <div class="item active">
-                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:228px;" alt="" />
-            </div>
-             <div class="item ">
-                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:228px;" alt="" />
-            </div>
-             <div class="item ">
-                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:228px;" alt="" />
-            </div>
-            
-                 
-                 </div>
-                 
-                 <a href="#slider-carousel" class="left control-carousel hidden-xs" data-slide="prev">
-            <i class="fa fa-angle-left"></i>
-                 </a>
-                 <a href="#slider-carousel" class="right control-carousel hidden-xs" data-slide="next">
-            <i class="fa fa-angle-right"></i>
-                 </a>
-            </div>  -->
-<img src="http://localhost/anyinform/lib/images/home/shipping.jpg" class="homeimageright">
+            <div class="col-xs-3">
 
-<!-- <div id="slider-carousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#slider-carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#slider-carousel" data-slide-to="1"></li>
-            <li data-target="#slider-carousel" data-slide-to="2"></li>
-        </ol>
+                <div id="carousel-example-generic1" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic1" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic1" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic1" data-slide-to="2"></li>
+                    </ol>
 
-        <div class="carousel-inner" style="width:21%;margin-top: 2%;">
-            <div class="item active">
-                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:228px;" alt="" />
-            </div>
-             <div class="item ">
-                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:228px;" alt="" />
-            </div>
-             <div class="item ">
-                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:228px;" alt="" />
-            </div>
-            
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="http://localhost/anyinform/lib/images/home/recommend3.jpg"/>
+                        </div>
+                        <div class="item">
+                            <img src="http://localhost/anyinform/lib/images/home/recommend3.jpg"/>
+                        </div>
+                        <div class="item">
+                            <img src="http://localhost/anyinform/lib/images/home/recommend3.jpg"/>
+                        </div>
+                    </div>
 
-        </div>
+                    <!-- Controls -->
+                    
+                </div>
+            </div>
 
-<a href="#slider-carousel" class="left control-carousel hidden-xs" data-slide="prev">
-            <i class="fa fa-angle-left"></i>
-        </a>
-        <a href="#slider-carousel" class="right control-carousel hidden-xs" data-slide="next">
-            <i class="fa fa-angle-right"></i>
-        </a>
-    </div>
- -->
-<img src="http://localhost/anyinform/lib/images/home/shipping.jpg" class="homeimageleft">
+
+<!--<img src="http://localhost/anyinform/lib/images/home/shipping.jpg" class="homeimageleft">-->
         </div>
     </div>
     
-<!--
-    <div id="slider-carousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#slider-carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#slider-carousel" data-slide-to="1"></li>
-            <li data-target="#slider-carousel" data-slide-to="2"></li>
-        </ol>
-
-        <div class="carousel-inner">
-            <div class="item active">
-                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:411px;" alt="" />
-            </div>
-             <div class="item ">
-                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:411px;" alt="" />
-            </div>
-             <div class="item ">
-                <img src="lib/images/home/banner.jpg" class="girl img-responsive fullwidth" style="height:411px;" alt="" />
-            </div>
-            
-
-        </div>
-
-        <a href="#slider-carousel" class="left control-carousel hidden-xs" data-slide="prev">
-            <i class="fa fa-angle-left"></i>
-        </a>
-        <a href="#slider-carousel" class="right control-carousel hidden-xs" data-slide="next">
-            <i class="fa fa-angle-right"></i>
-        </a>
-    </div>
--->
 </section>
 <!--/slider-->
 <script>
