--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -48,7 +48,7 @@ width: 163px;
     padding: 5px;
     color: #FFF;
     font-size: 18px;
-    background: rgba(229, 83, 94, 0.2);
+    background: #043eb3;
     -webkit-appearance: initial;
     border: 0;
     text-transform: capitalize;
