--- a/views/login.html
+++ b/views/login.html
@@ -4,6 +4,7 @@
 				<div class="col-sm-4 col-sm-offset-1">
 					<div class="login-form"><!--login form-->
 						<h2>Login to your account</h2>
+                        <h5 class="demo">{{msg}}</h5>
 						<form>
 							
 							<input type="email" ng-model="login.email" placeholder="Email Address" />
