--- a/views/navigation.html
+++ b/views/navigation.html
@@ -3,11 +3,11 @@
         <div class="col-xs-12">
            <div class="phone" style="text-align: right; margin-top:8px;">
 						<a href="#" class="with-symbol mrd10" data-size="" data-position="top-left" data-align="right">
-							<span class="symbol" style="font-size: 27px;"><img src="lib/images/home/Telephone-icon.png" style="width:30px;">022222 11111</span>
+							<span class="symbol" style="font-size: 27px;"><img src="{{'home/Telephone-icon.png'|imagepath1}}" style="width:30px;">022222 11111</span>
 						</a>
 					</div>
             <p class="text-center mrt10">
-                <a href="#/home"><img src="lib/images/home/logo2.png" style="height:100px;" /></a>
+                <a href="#/home"><img src="{{'home/logo2.png'|imagepath1}}" style="height:100px;" /></a>
             </p>
             
         </div>
