--- a/views/slider.html
+++ b/views/slider.html
@@ -57,13 +57,13 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="http://localhost/anyinform/lib/images/home/iframe4.png" width="200"/>
+                            <img src="{{'home/iframe4.png'|imagepath1}}" width="200"/>
                         </div>
                         <div class="item">
-                            <img src="http://localhost/anyinform/lib/images/home/iframe4.png" width="200"/>
+                            <img src="{{'home/iframe4.png'|imagepath1}}" width="200"/>
                         </div>
                         <div class="item">
-                            <img src="http://localhost/anyinform/lib/images/home/iframe4.png" width="200"/>
+                            <img src="{{'home/iframe4.png'|imagepath1}}" width="200"/>
                         </div>
                     </div>
 
@@ -124,13 +124,13 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="http://localhost/anyinform/lib/images/home/recommend3.jpg"/>
+                            <img src="{{'home/recommend3.jpg'|imagepath1}}"/>
                         </div>
                         <div class="item">
-                            <img src="http://localhost/anyinform/lib/images/home/recommend3.jpg"/>
+                            <img src="{{'home/recommend3.jpg'|imagepath1}}"/>
                         </div>
                         <div class="item">
-                            <img src="http://localhost/anyinform/lib/images/home/recommend3.jpg"/>
+                            <img src="{{'home/recommend3.jpg'|imagepath1}}"/>
                         </div>
                     </div>
 
