--- a/views/category.html
+++ b/views/category.html
@@ -51,7 +51,7 @@
 							<img class="media-object mediumimage" src="{{list.logo|imagepath}}" alt="">
 						</a>
 						<div class="media-body">
-							<h4 class="media-heading"><i class="fa fa-thumbs-up fa-2x"></i>&nbsp;{{list.name}}</h4>
+                            <h4 class="media-heading onlycursor" ng-click="linkclick(list.listing)"><i class="fa fa-thumbs-up fa-2x"></i>&nbsp;{{list.name}}</h4>
                             <p><i class="fa fa-map-marker fa-2x"></i>&nbsp;{{list.address}}</p>
                             <p><i class="fa fa-phone fa-2x"></i>&nbsp;{{list.contactno}}</p>
 							<div class="social-icons pull-laft">
@@ -59,14 +59,12 @@
                             <p class="pull-left">
                                 <a class="btn btn-primary mrr" href="">Send SMS</a>
                                 <a class="btn btn-primary mrr" href="">Send Email</a>
-                                <a class="btn btn-primary mrr" href="">Other Posts</a>
+<!--                                <a class="btn btn-primary mrr" href="">Other Posts</a>-->
                             </p>	
-							<ul class="nav navbar-nav mrt14">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-							</ul>
+							<span class='st_facebook_hcount' displayText='Facebook' style="height:0px"></span>
+<span class='st_twitter_hcount' displayText='Tweet'></span>
+<span class='st_linkedin_hcount' displayText='LinkedIn'></span>
+<span class='st_googleplus_hcount' displayText='Google +'></span>
 						</div>	
 						</div>
 					</div><!--Comments-->
