--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -32,6 +32,20 @@ width: 163px;
     color: #DF041D !important;
     cursor: pointer;
 }
+select, textarea{
+    background: #F0F0E9;
+border: medium none;
+color: #696763;
+display: block;
+font-family: 'Roboto', sans-serif;
+font-size: 14px;
+font-weight: 300;
+height: 40px;
+margin-bottom: 10px;
+outline: medium none;
+padding-left: 10px;
+width: 100%;
+}
 .filterselected {
     background: black;
 }
