--- a/views/header.html
+++ b/views/header.html
@@ -6,7 +6,7 @@
 						<div class="contactinfo">
 							<ul class="nav nav-pills">
                                 <li><a class="onlycursor" ng-click="loginfunction()"><i class="fa fa-lock"></i> {{loginlogout}}</a></li>
-								<li><a class="onlycursor">&nbsp;&nbsp;List Your Business</a></li>
+								<li><a href="#/listbusiness" class="onlycursor">&nbsp;&nbsp;List Your Business</a></li>
 								<!-- <li><a href="#"><i class="fa fa-phone"></i> +2 95 01 88 821</a></li>
 								<li><a href="#"><i class="fa fa-envelope"></i> info@domain.com</a></li> -->
 							</ul>
