--- a/views/slider.html
+++ b/views/slider.html
@@ -44,6 +44,7 @@
 
 
 
+            
             <div class="col-xs-3">
 
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -54,24 +55,25 @@
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                     </ol>
 
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner" role="listbox">
-                        <div class="item active">
-                            <img src="{{'home/iframe4.png'|imagepath1}}" width="200"/>
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            
+                        <div class="item active items">
+                            <img src="{{'home/download.jpg'|imagepath1}}" width="200"/>
                         </div>
-                        <div class="item">
-                            <img src="{{'home/iframe4.png'|imagepath1}}" width="200"/>
+                        <div class="item items">
+                            <img src="{{'home/banner.jpg'|imagepath1}}" width="200"/>
                         </div>
-                        <div class="item">
-                            <img src="{{'home/iframe4.png'|imagepath1}}" width="200"/>
-                        </div>
+                        <div class="item items">
+                            <img src="{{'home/download.jpg'|imagepath1}}" width="200"/>
                     </div>
 
                     <!-- Controls -->
                     
                 </div>
-
+                </div>
             </div>
+
 
 
             <div class="col-xs-6">
@@ -111,6 +113,7 @@
             </div>
 
 
+            
             <div class="col-xs-3">
 
                 <div id="carousel-example-generic1" class="carousel slide" data-ride="carousel">
@@ -124,13 +127,13 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="{{'home/recommend3.jpg'|imagepath1}}"/>
+                            <img src="{{'home/banner.jpg'|imagepath1}}"/>
                         </div>
                         <div class="item">
-                            <img src="{{'home/recommend3.jpg'|imagepath1}}"/>
+                            <img src="{{'home/download.jpg'|imagepath1}}"/>
                         </div>
                         <div class="item">
-                            <img src="{{'home/recommend3.jpg'|imagepath1}}"/>
+                            <img src="{{'home/banner.jpg'|imagepath1}}"/>
                         </div>
                     </div>
 
@@ -138,7 +141,6 @@
                     
                 </div>
             </div>
-
 
 <!--<img src="http://localhost/anyinform/lib/images/home/shipping.jpg" class="homeimageleft">-->
         </div>
