--- a/views/detail.html
+++ b/views/detail.html
@@ -73,7 +73,7 @@
 						<form>
 							<input type="text" ng-model="enquiry.name" placeholder="Name"/>
 							<input type="email" ng-model="enquiry.email" placeholder="Email"/>
-							<input type="number" max="10" min="6" ng-model="enquiry.phone" placeholder="Phone"/>
+							<input type="number" ng-model="enquiry.phone" placeholder="Phone"/>
                             <textarea ng-model="enquiry.comment" placeholder="Comment"></textarea>
 							<button class="btn btn-default" ng-click="enquiryuser(enquiry)">Signup</button>
 						</form>
